--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,82 @@
-body {
-    background-color: blueviolet;
-    font-size: 10px;
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100,300,400,600,700');
+
+.login{
+   font-family: 'Josefin Sans', sans-serif;
+   padding:40px 0px;
 }
+
+.login h1{
+    font-weight:600;
+    font-family: 'Josefin Sans', sans-serif;
+    text-transform:capitalize;
+    text-align:center;
+    color:#FFF;
+    background:#72d6f5;
+    padding:25px 0px;
+}
+
+.login form{
+    padding:40px;
+}
+
+.login .inner-form{
+    background:#FFF;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.4);
+}
+
+.login label{
+    font-weight:400;
+    font-size:15px;
+}
+
+.login .form-control {
+    background-color: #f5f5f5;
+    box-shadow: none;
+    color: #565656;
+    font-size:14px;
+    padding:30px 10px;
+    margin-bottom:30px;
+    border: 1px solid #f1f1f1;
+}
+
+.login .btn{ 
+    background: #72d6f5;
+    color: #FFF;
+    border-radius: 6px;
+    margin: 0 auto;
+    height: 48px;
+    line-height: 38px;
+    display: table;
+    font-size: 15px;
+    width: 100%;
+}
+
+.login .btn:hover{
+    background:#FFF;
+    color:#565656;
+    border:2px solid #24acb3;
+}
+
+.login .forgot {
+    text-align:center;
+    margin-top:30px;
+    font-size:16px;
+}
+
+.login input[type=text], .login input[type=password], .login input[type=email] {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #72d6f5;
+    border-radius: 0;
+    width: 100%;
+    margin: 0 0 30px 0;
+    padding: 0;
+    box-shadow: none;
+}
+
+
+.login input[type=text]:focus, .login input[type=password]:focus, .login input[type=email]:focus {
+    box-shadow: none;
+    border-bottom: 1px solid #6eafc4;
+}
+ 
